modify app structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,32 @@
 {
   "compilerOptions": {
+    "outDir": "build/dist",
     "module": "commonjs",
     "target": "es5",
+    "lib": ["es6", "dom"],
     "sourceMap": true,
+    "allowJs": true,
     "jsx": "react",
-    "watch": true,
-    "outDir": "js"
+    "moduleResolution": "node",
+    "rootDir": "src",
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true
   },
   "include": [
-    "src"
+    "src/**/*"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "build",
+    "scripts",
+    "acceptance-tests",
+    "webpack",
+    "jest",
+    "src/setupTests.ts"
+  ],
+  "types": [
+    "typePatches"
   ]
 }
