--- a/package.json
+++ b/package.json
@@ -1,34 +1,30 @@
 {
-  "name": "weather-simple",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "rr",
+  "version": "0.1.0",
+  "private": true,
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-1": "^6.13.0",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.1"
+    "react-addons-test-utils": "^15.6.2",
+    "react-scripts-ts": "2.8.0",
+    "ts-loader": "^3.2.0"
   },
   "dependencies": {
-    "axios": "^0.14.0",
-    "lodash": "^4.16.2",
-    "material-ui": "^1.0.0-beta.23",
-    "normalize.css": "^7.0.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-google-maps": "^4.11.0",
-    "react-redux": "^4.4.5",
-    "react-router": "^4.2.0",
-    "react-sparklines": "^1.6.0",
-    "redux": "^3.6.0",
-    "redux-promise": "^0.5.3"
+    "@types/cheerio": "^0.22.6",
+    "@types/enzyme": "^3.1.6",
+    "@types/jest": "^21.1.8",
+    "@types/node": "^8.5.1",
+    "@types/react": "^16.0.31",
+    "@types/react-dom": "^16.0.3",
+    "@types/react-redux": "^5.0.14",
+    "enzyme": "^3.2.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
+  },
+  "scripts": {
+    "start": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "test": "react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject"
   }
 }
