add googlemap, react-router, material-ui

--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "@types/cheerio": "^0.22.6",
     "@types/enzyme": "^3.1.6",
+    "@types/googlemaps": "^3.30.2",
     "@types/jest": "^21.1.8",
     "@types/node": "^8.5.1",
     "@types/react": "^16.0.31",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.14",
+    "@types/react-router": "^4.0.19",
     "enzyme": "^3.2.0",
+    "material-ui": "^1.0.0-beta.24",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
