--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "@types/cheerio": "^0.22.6",
     "@types/enzyme": "^3.1.6",
-    "@types/googlemaps": "^3.30.2",
     "@types/jest": "^21.1.8",
     "@types/node": "^8.5.1",
     "@types/react": "^16.0.31",
@@ -21,7 +20,9 @@
     "material-ui": "^1.0.0-beta.24",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-map-gl": "^3.1.5",
     "react-redux": "^5.0.6",
+    "recharts": "^1.0.0-beta.7",
     "redux": "^3.7.2"
   },
   "scripts": {
