--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.14",
     "@types/react-router": "^4.0.19",
+    "@types/redux-thunk": "^2.1.0",
     "axios": "^0.17.1",
     "enzyme": "^3.2.0",
     "material-ui": "^1.0.0-beta.24",
