--- a/package.json
+++ b/package.json
@@ -8,24 +8,17 @@
     "ts-loader": "^3.2.0"
   },
   "dependencies": {
-    "@types/cheerio": "^0.22.6",
-    "@types/enzyme": "^3.1.6",
-    "@types/jest": "^21.1.8",
-    "@types/node": "^8.5.1",
-    "@types/react": "^16.0.31",
-    "@types/react-dom": "^16.0.3",
-    "@types/react-redux": "^5.0.14",
-    "@types/react-router": "^4.0.19",
-    "@types/redux-thunk": "^2.1.0",
+    "@types/react": "^16.0.34",
     "axios": "^0.17.1",
-    "enzyme": "^3.2.0",
     "material-ui": "^1.0.0-beta.24",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-map-gl": "^3.1.5",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "recharts": "^1.0.0-beta.7",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
